--- a/blog/static/blog/css/blog.css
+++ b/blog/static/blog/css/blog.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .blog-card {
   display: flex;
   flex-direction: column;
@@ -11,25 +12,20 @@
   overflow: hidden;
   z-index: 0;
 }
-
 .blog-card a {
   color: inherit;
 }
-
 .blog-card a:hover {
   color: #5ad67d;
 }
-
 .blog-card:hover .photo {
   transform: scale(1.3) rotate(3deg);
 }
-
 .blog-card .meta {
   position: relative;
   z-index: 0;
   height: 200px;
 }
-
 .blog-card .photo {
   position: absolute;
   top: 0;
@@ -38,82 +34,69 @@
   left: 0;
   background-size: cover;
   background-position: center;
-  transition: transform .2s;
+  transition: transform 0.2s;
 }
-
 .blog-card .details,
 .blog-card .details ul {
   margin: auto;
   padding: 0;
   list-style: none;
 }
-
 .blog-card .details {
   position: absolute;
   top: 0;
   bottom: 0;
   left: -100%;
   margin: auto;
-  transition: left .2s;
+  transition: left 0.2s;
   background: rgba(0, 0, 0, 0.6);
   color: #fff;
   padding: 10px;
   width: 100%;
-  font-size: .9rem;
+  font-size: 0.9rem;
 }
-
 .blog-card .details a {
   text-decoration: dotted underline;
 }
-
 .blog-card .details ul li {
   display: inline-block;
 }
-
 .blog-card .details .author:before {
   font-family: FontAwesome;
   margin-right: 10px;
-  content: "\f007";
+  content: "";
 }
-
 .blog-card .details .date:before {
   font-family: FontAwesome;
   margin-right: 10px;
-  content: "\f133";
+  content: "";
 }
-
 .blog-card .details .tags ul:before {
   font-family: FontAwesome;
-  content: "\f02b";
+  content: "";
   margin-right: 10px;
 }
-
 .blog-card .details .tags li {
   margin-right: 2px;
 }
-
 .blog-card .details .tags li:first-child {
   margin-left: -4px;
 }
-
 .blog-card .description {
   padding: 1rem;
   background: #fff;
   position: relative;
   z-index: 1;
 }
-
 .blog-card .description h1,
 .blog-card .description h2 {
   font-family: Poppins, sans-serif;
 }
-
 .blog-card .description h1 {
   line-height: 1;
   margin: 0;
   font-size: 1.7rem;
 }
-
 .blog-card .description h2 {
   font-size: 1rem;
   font-weight: 300;
@@ -121,40 +104,33 @@
   color: #a2a2a2;
   margin-top: 5px;
 }
-
 .blog-card .description .read-more {
   text-align: right;
 }
-
 .blog-card .description .read-more a {
   color: #5ad67d;
   display: inline-block;
   position: relative;
 }
-
 .blog-card .description .read-more a:after {
-  content: "\f061";
+  content: "";
   font-family: FontAwesome;
   margin-left: -10px;
   opacity: 0;
   vertical-align: middle;
-  transition: margin .3s, opacity .3s;
+  transition: margin 0.3s, opacity 0.3s;
 }
-
 .blog-card .description .read-more a:hover:after {
   margin-left: 5px;
   opacity: 1;
 }
-
 .blog-card p {
   position: relative;
   margin: 1rem 0 0;
 }
-
 .blog-card p:first-of-type {
   margin-top: 1.25rem;
 }
-
 .blog-card p:first-of-type:before {
   content: "";
   position: absolute;
@@ -164,11 +140,9 @@
   top: -0.75rem;
   border-radius: 3px;
 }
-
 .blog-card:hover .details {
   left: 0%;
 }
-
 @media (min-width: 640px) {
   .blog-card {
     flex-direction: row;
@@ -205,4 +179,4 @@
   }
 }
 
-/*# sourceMappingURL=../css/blog.css.map */
+/*# sourceMappingURL=blog.css.map */
