adding updates to blog layout

--- a/blog/static/blog/css/navbar.css
+++ b/blog/static/blog/css/navbar.css
@@ -80,3 +80,13 @@
         overflow-y: auto;
     }
 }
+
+.logo-link {
+    text-decoration: none;
+    color: #000;
+}
+
+.logo-link :active {
+    text-decoration: none;
+    color: #000;
+}
