--- a/blog/static/blog/css/blog.css
+++ b/blog/static/blog/css/blog.css
@@ -2,15 +2,16 @@
 .blog-card {
   display: flex;
   flex-direction: column;
-  margin: 1rem auto;
-  box-shadow: 0 3px 7px -1px rgba(0, 0, 0, 0.1);
-  margin-bottom: 1.6%;
+  box-shadow: 0 3px 7px -1px rgba(0, 0, 0, 0.4);
   background: #fff;
   line-height: 1.4;
   font-family: sans-serif;
   border-radius: 5px;
   overflow: hidden;
   z-index: 0;
+  width: 90%;
+  margin: auto;
+  margin-bottom: 2.6%;
 }
 .blog-card a {
   color: inherit;
@@ -146,7 +147,6 @@
 @media (min-width: 640px) {
   .blog-card {
     flex-direction: row;
-    max-width: 700px;
   }
   .blog-card .meta {
     flex-basis: 40%;
