--- a/blog/static/blog/css/style.css
+++ b/blog/static/blog/css/style.css
@@ -1,10 +1,12 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: rgb(255, 255, 255);
+    height: 100%;
+    box-sizing: border-box;
 }
 
 .top-info {
-    width: 70%;
+    width: 80%;
     margin: auto;
     text-align: center;
     font-size: 2.5em;
@@ -75,7 +77,7 @@ body {
 }
 
 .blog-detail-container {
-    width: 60%;
+    width: 80%;
     margin: auto;
     text-align: left;
 }
@@ -94,4 +96,17 @@ body {
     color: rgb(146, 146, 146);
     font-weight: lighter;
     font-style: italic;
+}
+
+.blog-card-container {
+    margin-bottom: 100px;
+}
+
+.footer {
+    margin-top: 10px;
+    height: 12px;
+}
+
+.blog-detail-image-container {
+    text-align: center;
 }
