--- a/blog/static/blog/scss/blog.scss
+++ b/blog/static/blog/scss/blog.scss
@@ -5,15 +5,16 @@ $color_grey_dark: #a2a2a2;
 .blog-card {
     display: flex;
     flex-direction: column;
-    margin: 1rem auto;
-    box-shadow: 0 3px 7px -1px rgba(#000, .1);
-    margin-bottom: 1.6%;
+    box-shadow: 0 3px 7px -1px rgba(#000, .4);
     background: $color_white;
     line-height: 1.4;
     font-family: sans-serif;
     border-radius: 5px;
     overflow: hidden;
     z-index: 0;
+    width: 90%;
+    margin: auto;
+    margin-bottom: 2.6%;
     a {
         color: inherit;
         &:hover {
@@ -153,7 +154,6 @@ $color_grey_dark: #a2a2a2;
     }
     @media (min-width: 640px) {
         flex-direction: row;
-        max-width: 700px;
         .meta {
             flex-basis: 40%;
             height: auto;
