--- a/blog/templates/blog/navbar.html
+++ b/blog/templates/blog/navbar.html
@@ -6,7 +6,7 @@
   <input type="checkbox" id="nav-check">
   <div class="nav-header">
     <div class="nav-title">
-      The Developer's Journey
+      <a class="logo-link" href="/">The Developer's Journey</a>
     </div>
   </div>
   <div class="nav-btn">
@@ -18,8 +18,8 @@
   </div>
   
   <div class="nav-links">
-    <a href="//github.io/jo_geek" target="_blank">Learn More</a>
-    <a href="http://stackoverflow.com/users/4084003/" target="_blank">Contact</a>
+    <a href="https://github.com/mforte215" target="_blank">Learn More</a>
+    <a href="/" target="_blank">Contact</a>
   
   </div>
 </div>
