--- a/blog/static/blog/css/style.css
+++ b/blog/static/blog/css/style.css
@@ -111,4 +111,5 @@ body {
     text-align: center;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     border-radius: 6px;
+    padding: 15px;
 }
