--- a/blog/static/blog/css/style.css
+++ b/blog/static/blog/css/style.css
@@ -113,3 +113,9 @@ body {
     border-radius: 6px;
     padding: 15px;
 }
+
+.blog-detail-image-container img {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 6px;
+}
+
