--- a/blog/static/blog/css/blog.css
+++ b/blog/static/blog/css/blog.css
@@ -11,6 +11,8 @@
   border-radius: 5px;
   overflow: hidden;
   z-index: 0;
+  margin-top: 0;
+  width: 80%;
 }
 .blog-card a {
   color: inherit;
@@ -146,7 +148,6 @@
 @media (min-width: 640px) {
   .blog-card {
     flex-direction: row;
-    max-width: 700px;
   }
   .blog-card .meta {
     flex-basis: 40%;
