--- a/blog/static/blog/css/navbar.css
+++ b/blog/static/blog/css/navbar.css
@@ -26,6 +26,16 @@
     font-size: 18px;
 }
 
+.nav-title-link {
+    text-decoration: none;
+    color: black;
+}
+
+.nav-title-link :active {
+    text-decoration: none;
+    color: black;
+}
+
 .nav>.nav-links>a {
     display: inline-block;
     padding: 13px 10px 13px 10px;
