--- a/blog/static/blog/css/style.css
+++ b/blog/static/blog/css/style.css
@@ -1,10 +1,12 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: rgb(255, 255, 255);
+    font-size: larger;
+    box-sizing: border-box;
 }
 
 .top-info {
-    width: 70%;
+    width: 80%;
     margin: auto;
     text-align: center;
     font-size: 2.5em;
@@ -83,6 +85,7 @@ body {
 .blog-detail-title {
     font-size: 3.5em;
     font-weight: normal;
+    margin-bottom: 0;
 }
 
 .blog-detail-body {
@@ -92,6 +95,35 @@ body {
 
 .blog-detail-info {
     color: rgb(146, 146, 146);
-    font-weight: lighter;
-    font-style: italic;
+    font-weight: normal;
+    margin: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    width: 98%;
+}
+
+.blog-card-container {
+    margin-bottom: 135px;
+}
+
+.blog-detail-image {
+    width: 100%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 4px;
+    height: 100%;
+}
+
+.blog-detail-image-caption {
+    text-align: center;
+    width: 100%;
+    margin-top: 0;
+}
+
+.blog-image-container {
+    margin-bottom: 4%;
+    color: rgb(146, 146, 146);
+    height: 100%;
+}
+
+.sub-detail-info {
+    margin: 0;
 }
