--- a/blog/static/blog/scss/blog.scss
+++ b/blog/static/blog/scss/blog.scss
@@ -14,6 +14,8 @@ $color_grey_dark: #a2a2a2;
     border-radius: 5px;
     overflow: hidden;
     z-index: 0;
+    margin-top: 0;
+    width: 80%;
     a {
         color: inherit;
         &:hover {
@@ -153,7 +155,6 @@ $color_grey_dark: #a2a2a2;
     }
     @media (min-width: 640px) {
         flex-direction: row;
-        max-width: 700px;
         .meta {
             flex-basis: 40%;
             height: auto;
