--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -6,6 +6,7 @@
 <h1 class="top-info">Hi, my name is Mark Forte. I am starting a blog to share my journey to learn new web development topics and technologies. Enjoy and I hope you learn something from my expirence!</h1>
 </div>
 {% if latest_blog_list %}
+<div class="blog-card-container" />
     {% for blog in latest_blog_list %}
 
   <div class="blog-card">
@@ -34,6 +35,7 @@
     </div>
   </div>
     {% endfor %}
+    </div>
 {% else %}
     <p>No blogs are available.</p>
 {% endif %}
