--- a/blog/templates/blog/navbar.html
+++ b/blog/templates/blog/navbar.html
@@ -6,7 +6,7 @@
   <input type="checkbox" id="nav-check">
   <div class="nav-header">
     <div class="nav-title">
-      <a class="nav-title-link" href="/">The Developer's Journey</a>
+      <a class="nav-title-link" href="/" >The Developer's Journey</a>
     </div>
   </div>
   <div class="nav-btn">
@@ -18,7 +18,7 @@
   </div>
   
   <div class="nav-links">
-    <a href="www.github.com/mforte215" target="_blank">Learn More</a>
+    <a href="https://www.github.com/mforte215" target="_blank">Learn More</a>
     <a href="/" target="_blank">Contact</a>
   
   </div>
