--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -11,16 +11,15 @@
 
   <div class="blog-card">
     <div class="meta">
-      <div class="photo" style="background-image: url(https://storage.googleapis.com/chydlx/codepen/blog-cards/image-1.jpg)"></div>
+      <div class="photo" style="background-image: url({{blog.imageUrl}})"></div>
       <ul class="details">
         <li class="author"><a href="#">{{blog.createdBy}}</a></li>
         <li class="date">{{blog.createdAt}}</li>
         <li class="tags">
           <ul>
-            <li><a href="#">Learn</a></li>
-            <li><a href="#">Code</a></li>
-            <li><a href="#">HTML</a></li>
-            <li><a href="#">CSS</a></li>
+              {% for tag in blog.tags.all %}
+            <li>{{tag.name}}</li>
+            {% endfor %}
           </ul>
         </li>
       </ul>
@@ -28,7 +27,7 @@
     <div class="description">
       <h1>{{blog.title}}</h1>
       <h2>{{blog.teaser}}</h2>
-      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad eum dolorum architecto obcaecati enim dicta praesentium, quam nobis! Neque ad aliquam facilis numquam. Veritatis, sit.</p>
+      <p>{{blog.body | safe}}</p>
       <p class="read-more">
         <a href="/blog/{{ blog.id }}/">Read More</a>
       </p>
