--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'blog/css/style.css' %}">
 <link href="{% static 'blog/css/blog.css' %}" rel="stylesheet">
 <link rel="shortcut icon" href="{%  static 'blog/images/favicon.ico' %}">
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
 <title>The Developer's Journey</title>
 </head>
 <body>
