--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="top-info-container">
-<h1 class="top-info">Hi, my name is Mark Forte. I am starting a blog to share my journey to learn new web development topics and technologies. Enjoy and I hope you learn something from my expirence!</h1>
+<h2 class="top-info">Hi, my name is Mark Forte. I am starting a blog to share my journey to learn new software development.</h2>
 </div>
 {% if latest_blog_list %}
 <div class="blog-card-container" />
